# intepret-spi-rs

./: Cargo.toml  README.md
src/: interpret_spi.ipynb  main.rs
