[package]
name = "intepret-spi-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
chrono = "0.4.22"
csv = "1.1.6"
plotters = "0.3.3"
serde = {version = "1.0.144", features = ["derive"]}
